[Editor] Make sure the comment dialog is visible on the screen (bug 1989304)

--- a/web/comment_manager.css
+++ b/web/comment_manager.css
@@ -20,7 +20,8 @@
   min-width: 200px;
   position: absolute;
   padding: 8px 16px 16px;
-  margin: 0;
+  margin-left: 0;
+  margin-top: 0;
   box-sizing: border-box;
 
   border-radius: 8px;
