[Editor] Don't add scrollbars when it's useless in the comment sidebar (bug 1990099)

--- a/web/comment_manager.css
+++ b/web/comment_manager.css
@@ -323,7 +323,7 @@
   }
 
   #editorCommentsSidebarListContainer {
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
 
     #editorCommentsSidebarList {
