[Editor] Add a fake annotation (in the annotation layer) associated with an editor in order to be able to show the comment button (bug 1989420)

--- a/web/annotation_editor_layer_builder.css
+++ b/web/annotation_editor_layer_builder.css
@@ -69,6 +69,13 @@
   }
 }
 
+.page:has(.annotationEditorLayer.nonEditing)
+  .annotationLayer
+  .editorAnnotation {
+  position: absolute;
+  pointer-events: none;
+}
+
 #viewerContainer.pdfPresentationMode:fullscreen,
 .annotationEditorLayer.disabled {
   .noAltTextBadge {
