Increase the rendering quality of the detail view (bug 1991482)
But keep a lower quality when enableOptimizedPartialRendering is true because we need to compensate the time
used to compute the bboxes and since subsequent rendering are faster it's more acceptable to see
a lower quality image for few tenths of seconds.

--- a/web/pdf_viewer.css
+++ b/web/pdf_viewer.css
@@ -99,6 +99,10 @@
       .structTree {
         contain: strict;
       }
+
+      &.detailView {
+        image-rendering: pixelated;
+      }
     }
   }
 }
