1. use PingFang SC to display 2. disable typing signature 3. stamping    needs facial recognition

--- a/web/annotation_editor_layer_builder.css
+++ b/web/annotation_editor_layer_builder.css
@@ -515,6 +515,7 @@
   overflow: visible;
   white-space: nowrap;
   font: 10px sans-serif;
+  font-family: 'PingFang SC', sans-serif;
   line-height: var(--freetext-line-height);
   text-align: start;
   user-select: none;
