--- a/web/annotation_layer_builder.css
+++ b/web/annotation_layer_builder.css
@@ -109,6 +109,7 @@
       overflow: visible;
       white-space: nowrap;
       font: 10px sans-serif;
+      font-family: 'PingFang SC', sans-serif;
       line-height: 1.35;
     }
   }
