Lint and format the HTML in using Prettier
The linter found some issues in viewer.html with </input> which isn't required
and a missing closing div in test/resources/reftest-analyzer.html.
The HTML can now be nicely formatted. In order to not break the build for
mozilla-central, the preprocessor has been fixed in order to take into account
the white spaces at the beginning of a comment line.
And finally, make .prettierrc (which is supposed to be either json or yaml)
itself lintable.

--- a/examples/components/simpleviewer.html
+++ b/examples/components/simpleviewer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <!--
 Copyright 2014 Mozilla Foundation
 
@@ -15,37 +15,37 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <html dir="ltr" mozdisallowselectionprint>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="google" content="notranslate">
-  <title>PDF.js viewer using built components</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="google" content="notranslate" />
+    <title>PDF.js viewer using built components</title>
 
-  <style>
-    body {
-      background-color: #808080;
-      margin: 0;
-      padding: 0;
-    }
-    #viewerContainer {
-      overflow: auto;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
+    <style>
+      body {
+        background-color: #808080;
+        margin: 0;
+        padding: 0;
+      }
+      #viewerContainer {
+        overflow: auto;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
 
-  <link rel="stylesheet" href="../../node_modules/pdfjs-dist/web/pdf_viewer.css">
+    <link rel="stylesheet" href="../../node_modules/pdfjs-dist/web/pdf_viewer.css" />
 
-  <script src="../../node_modules/pdfjs-dist/build/pdf.mjs" type="module"></script>
-  <script src="../../node_modules/pdfjs-dist/web/pdf_viewer.mjs" type="module"></script>
-</head>
+    <script src="../../node_modules/pdfjs-dist/build/pdf.mjs" type="module"></script>
+    <script src="../../node_modules/pdfjs-dist/web/pdf_viewer.mjs" type="module"></script>
+  </head>
 
-<body tabindex="1">
-  <div id="viewerContainer">
-    <div id="viewer" class="pdfViewer"></div>
-  </div>
+  <body tabindex="1">
+    <div id="viewerContainer">
+      <div id="viewer" class="pdfViewer"></div>
+    </div>
 
-  <script src="simpleviewer.mjs" type="module"></script>
-</body>
+    <script src="simpleviewer.mjs" type="module"></script>
+  </body>
 </html>
