--- a/web/sidebar.css
+++ b/web/sidebar.css
@@ -22,6 +22,7 @@
   --sidebar-box-shadow:
     0 0.25px 0.75px light-dark(rgb(0 0 0 / 0.05), rgb(0 0 0 / 0.2)),
     0 2px 6px 0 light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.4));
+  --sidebar-backdrop-filter: none;
   --sidebar-border-radius: 8px;
   --sidebar-padding: 5px;
   --sidebar-min-width: 180px;
@@ -46,6 +47,7 @@
   width: var(--sidebar-width);
   min-width: var(--sidebar-min-width);
   max-width: var(--sidebar-max-width);
+  backdrop-filter: var(--sidebar-backdrop-filter);
 
   .sidebarResizer {
     width: var(--resizer-width);
@@ -63,6 +65,10 @@
 
     &:hover {
       background-color: var(--resizer-hover-bg-color);
+    }
+    &:focus-visible {
+      background-color: var(--resizer-hover-bg-color);
+      outline: none;
     }
   }
 
