Add some callbacks when resizing a sidebar
And use a ResizeObserver in order to avoid to have to compare the width with min/max which can be in
an other unit than px.

--- a/web/sidebar.css
+++ b/web/sidebar.css
@@ -79,5 +79,9 @@
     :not(.sidebarResizer) {
       pointer-events: none;
     }
+
+    .sidebarResizer {
+      background-color: var(--resizer-hover-bg-color);
+    }
   }
 }
