Move Rotate Clockwise button to main toolbar

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -542,6 +542,10 @@ body {
   mask-image: var(--toolbarButton-zoomIn-icon);
 }
 
+#pageRotateCw::before {
+  mask-image: var(--secondaryToolbarButton-rotateCw-icon);
+}
+
 #editorCommentButton::before {
   mask-image: var(--toolbarButton-editorComment-icon);
   transform: scaleX(var(--dir-factor));
