Add a new linting task in order to detect unused/unknown css variables in the Firefox build
The goal is to be able to catch the errors before making a release.
And fix some css issues (especially the missing css code for the newly added menu.css)

--- a/web/pdf_viewer.css
+++ b/web/pdf_viewer.css
@@ -17,10 +17,11 @@
 @import url(text_layer_builder.css);
 @import url(annotation_layer_builder.css);
 @import url(xfa_layer_builder.css);
-/* Ignored in GECKOVIEW builds: */
+/* Ignored in GECKOVIEW: begin */
 @import url(annotation_editor_layer_builder.css);
 @import url(sidebar.css);
 @import url(menu.css);
+/* Ignored in GECKOVIEW: end */
 
 :root {
   color-scheme: light dark;
