--- a/web/menu.css
+++ b/web/menu.css
@@ -33,6 +33,23 @@
   --menuitem-focus-outline-color: light-dark(#0062fa, #00cadb);
   --menuitem-focus-border-color: light-dark(white, black);
 
+  --menu-bg: light-dark(white, #23222b);
+  --menu-background-blend-mode: normal;
+  --menu-box-shadow:
+    0 0.375px 1.5px 0 light-dark(rgb(0 0 0 / 0.05), rgb(0 0 0 / 0.2)),
+    0 3px 12px 0 light-dark(rgb(0 0 0 / 0.1), rgb(0 0 0 / 0.4));
+  --menu-border-color: light-dark(rgb(21 20 26 / 0.1), rgb(251 251 254 / 0.1));
+  --menuitem-border-radius: 8px;
+  --menu-backdrop-filter: none;
+  --menu-text-color: light-dark(#15141a, #fbfbfe);
+  --menuitem-text-hover-fg: var(--menu-text-color);
+  --menuitem-hover-bg: color-mix(
+    in srgb,
+    var(--menu-text-color),
+    transparent 86%
+  );
+  --menuitem-hover-background-blend-mode: normal;
+
   @media screen and (forced-colors: active) {
     --menu-bg: Canvas;
     --menu-background-blend-mode: normal;
