Move the css for tree object in its own file

--- a/web/pdf_viewer.css
+++ b/web/pdf_viewer.css
@@ -21,6 +21,7 @@
 @import url(annotation_editor_layer_builder.css);
 @import url(sidebar.css);
 @import url(menu.css);
+@import url(tree.css);
 /* Ignored in GECKOVIEW: end */
 
 :root {
