Change the sidebar for a views manager
Update the styles and HTML to reflect the new views manager concept.
For now, nothing about split/merge functionality is implemented or visible.
The new styles for the outline, attachments, and layers will be added later.

The thumbnail view is now accessible with the keyboard.

--- a/web/pdf_viewer.css
+++ b/web/pdf_viewer.css
@@ -19,9 +19,10 @@
 @import url(xfa_layer_builder.css);
 /* Ignored in GECKOVIEW: begin */
 @import url(annotation_editor_layer_builder.css);
-@import url(sidebar.css);
 @import url(menu.css);
 @import url(tree.css);
+@import url(views_manager.css);
+@import url(sidebar.css);
 /* Ignored in GECKOVIEW: end */
 
 :root {
